=== release 0.10.0.1 ===

2008-06-02     Paul Brossier  <piem@piem.org>

	* configure.ac: add pkg-config checks for samplerate and fftw3f

2008-05-03	Paul Brossier  <piem@piem.org>

	* first versions of aubiotempo and aubiopitch

2008-02-04  Paul Brossier  <piem@piem.org>

	* initial project created